# NimbusImage

./: .eslintrc.cjs  .gitignore  CLAUDE.md  ONNX.md  README.md  SNAPSHOTMIGRATION.md  TOOLS.md  USER_COLOR_PREFERENCES.md  docker-compose.yaml  docker.env  girder.env  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.js  worker.env
.claude-plugin/: marketplace.json
codebaseDocumentation/: ANNOTATION-STUBS.md  ANNOTATION_PERFORMANCE_OPTIMIZATIONS.md  API_RATE_LIMITING_AUDIT.md  BATCH_ANNOTATION_COMPUTE.md  BATCH_PROPERTY_COMPUTE.md  BUG_OWNER_CAN_REMOVE_SELF_FROM_DATASET.md  BUTTON_CONVENTIONS.md  (+18 more)
nimbusimage/: README.md  TESTING.md  mkdocs.yml  pyproject.toml
nimbusimage/docs/: getting-started.md  index.md
nimbusimage/docs/api/: annotations.md  client.md  collections.md  config.md  connections.md  coordinates.md  dataset.md  export.md  filters.md  history.md  images.md  jobs.md  models.md  projects.md  properties.md  sharing.md  urls.md  worker.md
nimbusimage/examples/: getting_started.ipynb
nimbusimage/nimbusimage/: __init__.py  _access.py  _girder.py  annotations.py  client.py  collections.py  config.py  connections.py  coordinates.py  dataset.py  exceptions.py  export.py  filters.py  history.py  images.py  jobs.py  models.py  projects.py  properties.py  sharing.py  urls.py  worker.py
nimbusimage/tests/: conftest.py  test_annotations.py  test_client.py  test_collections.py  test_config.py  test_connections.py  test_coordinates.py  test_dataset.py  test_export.py  test_filters.py  test_history.py  test_images.py  test_jobs.py  test_models.py  test_projects.py  test_properties.py  test_sharing.py  test_urls.py  test_worker.py  test_worker_rate_limit.py
nimbusimage/tests/integration/: conftest.py  test_live_annotations.py  test_live_client.py  test_live_config_images.py  test_live_connections.py  test_live_properties.py  test_live_workers.py
(+464 files in other folders)
